--- a/templates/base.html
+++ b/templates/base.html
@@ -40,8 +40,10 @@
     </main>
 
     <footer>
-        <a href="https://t.me/sr_kpi" target="_blank" class="fa-brands fa-telegram"><span
-                class="fa-sr-only">Telegram</span></a>
+        <a href="https://t.me/kpicampus" target="_blank"><img src="{% static 'SRS_logo.svg' %}" class="srs-logo"><span
+                class="fa-sr-only">СРС Telegram</span></a>
+        <a href="https://t.me/sr_kpi" target="_blank"><img src="{% static 'SR_logo.svg' %}" class="sr-logo"><span
+                class="fa-sr-only">СР Telegram</span></a>
         <a href="https://www.instagram.com/sr_kpi/" target="_blank" class="fa-brands fa-instagram"><span
                 class="fa-sr-only">Instagram</span></a>
         <a href="https://www.facebook.com/srkpi" target="_blank" class="fa-brands fa-facebook"><span
