--- a/templates/password_reset_confirm.html
+++ b/templates/password_reset_confirm.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h3>Змініть ваш пароль</h3>
+<h1>Змінити пароль</h1>
 {% if form.errors %}
 <div>
     {% for key, value in form.errors.items %}
@@ -9,15 +9,15 @@
 </div>
 <button><span>&times;</span></button>
 {% endif %}
-<form method="POST">
+<form method="POST" class="main-block">
     {% csrf_token %}
     {% for field in form %}
     <p>{{ field.label }}: {{ field }}</p>
 
     {% for error in field.errors %}
-    <small style="color: red">{{ error }}</small><br>
+    <small>{{ error }}</small><br>
     {% endfor %}
     {% endfor %}
-    <button type="submit" id="reset">Змінити пароль</button>
+    <button class="enter-button" type="submit" id="reset">Змінити пароль</button>
 </form>
 {% endblock content %}
