--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,7 @@ small {
     color: red;
 }
 
-button, .fa-eye {
+button {
     cursor: pointer;
 }
 
@@ -30,6 +30,7 @@ body {
     font-family: 'Yanone Kaffeesatz', sans-serif;
     display: flex;
     flex-direction: column;
+    overflow: overlay;
 }
 
 a {
@@ -39,8 +40,6 @@ a {
 footer a, nav a, .enter-button, header a {
     text-decoration: none;
 }
-/*general end*/
-
 
 header, footer {
     background: var(--main-block-black);
@@ -51,7 +50,10 @@ header, footer {
     display: flex;
     align-items: center;
 }
+/*general end*/
 
+
+/*header start*/
 header {
     position: fixed;
     top: 0;
@@ -73,11 +75,10 @@ header .fa-circle-user {
     text-decoration: none;
     font-size: 200%;
 }
+/*header end*/
 
-.show {
-    display: block;
-}
 
+/*main start*/
 main {
     font-size: 120%;
     text-align: center;
@@ -86,23 +87,13 @@ main {
     flex: 1 0 auto;
 }
 
-main > *, .side-wrapper > * {
+main > * {
     margin: 2rem auto 0;
     width: var(--main-width);
 }
 
 main > *:last-child  {
-    margin-bottom: calc(var(--main-height) / 1.5);
-}
-
-.logged {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.side-wrapper .instruction {
-    margin-bottom: calc(var(--main-height) / 1.5);
+    margin-bottom: var(--main-height);
 }
 
 .main-block {
@@ -116,87 +107,16 @@ main > *:last-child  {
     box-shadow: var(--box-shadow);
 }
 
-.folders {
-    align-self: start;
-    justify-self: start;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: start !important;
-}
-
-.folders > * {
-    margin-top: 2rem;
-}
-
-.folders-elem {
-    width: var(--main-width);
-    max-width: 400px;
-    height: 135px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.folders-elem h3 {
-    margin: 0;
-}
-
-.folders-elem h3::before {
-    font-family: "Fontawesome", sans-serif;
-    content: "\f015";
-    margin-right: 1rem;
-    font-size: 90%;
-}
-
-.side-wrapper {
-    width: 100%;
-}
-
-.side-wrapper > * {
-    width: var(--main-width);
-}
-
 h1, h2 {
     color: #ffffff;
     height: fit-content;
     display: inline-block;
     padding-bottom: 0;
 }
+/*main end*/
 
-.instruction {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-}
 
-.icons-block, .instruction ol, .side-wrapper, .alert {
-    margin: 0 auto;
-}
-
-.icons-block {
-    width: 12%;
-    float: left;
-}
-
-.instruction ol {
-    display: inline-block;
-    width: 80%;
-}
-
-.instruction ol li, .icons-block i {
-    margin-top: 2rem;
-    text-align: left;
-    font-weight: bold;
-}
-
-.main-block .fa-circle-user {
-    font-size: 10rem;
-    margin-bottom: 1.7rem;
-    color: #41B562;
-}
-
+/*form start*/
 form {
     display: flex;
     flex-direction: column;
@@ -225,22 +145,8 @@ input, textarea, select, .enter-button, optgroup {
     padding: 0.6rem;
 }
 
-option {
-    font-family: "Yanone Kaffeesatz", sans-serif;
-}
-
 input, textarea, select {
    border: solid #111111 2px;
-}
-
-.fa-eye {
-    font-size: 70%;
-    text-align: right;
-    margin: -3.3rem 0.7rem 0 0;
-}
-
-.login-form button {
-    margin-top: 2.4rem;
 }
 
 input, select {
@@ -257,7 +163,10 @@ textarea {
     width: 100%;
     resize: none;
 }
+/*form end*/
 
+
+/*buttons start*/
 .enter-button {
     min-width: 10rem;
     max-width: fit-content;
@@ -275,7 +184,10 @@ textarea {
 a.enter-button {
     font-size: 100%
 }
+/*buttons end*/
 
+
+/*footer start*/
 footer {
     flex-shrink: 0;
     justify-content: space-evenly;
@@ -283,83 +195,60 @@ footer {
 
 footer a {
     color: #ffffff;
-    font-size: 125%;
+    font-size: 170%;
+    display: flex;
 }
+
+.srs-logo {
+    width: 2rem;
+    margin: 0;
+}
+
+.sr-logo {
+    width: 1.3rem;
+}
+/*footer end*/
+
+
+/*scrollbar start*/
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    border-radius: 5px;
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #BDBDBD;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-button {
+    height: calc(var(--main-height) / 2);
+}
+/*scrollbar start*/
+
 
 @media screen and (min-width: 540px) {
     header {
         padding: 0 1.8rem;
     }
+
     main {
         font-size: 130%;
     }
-
-    .main-block .fa-circle-user {
-        font-size: 11rem;
-    }
 }
+
 
 @media screen and (min-width: 768px) {
     main {
         font-size: 140%;
     }
-
-    .main-block .fa-circle-user {
-        font-size: 12rem;
-    }
-
-    .side-wrapper {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        align-items: center;
-        width: 50%;
-    }
-
-    .side-wrapper:first-child {
-        float: left;
-    }
-
-    .folders {
-        width: 100%;
-    }
-
-    .side-wrapper > * {
-        width: 88%;
-    }
-
-    .side-wrapper .main-block {
-        height: 23rem;
-    }
-
-    .side-wrapper .heading{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: calc(var(--main-height) * 1.5);
-        font-size: 170%;
-    }
-
-    .folders-elem {
-        width: calc(var(--main-width) / 2);
-    }
-
-    .fa-eye {
-        margin: -3.7rem 0.7rem 0 0;
-    }
-
 }
+
 
 @media screen and (min-width: 1080px) {
     main {
         font-size: 150%;
-    }
-
-    .main-block .fa-circle-user {
-        font-size: 13rem;
-    }
-
-    .folders-elem {
-        width: calc(var(--main-width) / 3);
     }
 }
