--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
 {% load static %}
+{% block css_files %}
+<link href="{% static '/css/main-page.css' %}" rel="stylesheet" type="text/css" />
+{% endblock css_files %}
 
 {% block content %}
 <div class="side-wrapper">
@@ -50,7 +53,7 @@
         {% endfor %}
 
         {% endfor %}
-        <i class="fa-regular fa-eye" onclick="showPassword()"><span class="fa-sr-only"></span></i>
+        <button type="button" class="password-button fa-regular fa-eye-slash" onclick="showPassword()"></button>
         <button type="submit" class="enter-button">Вхід</button>
     </form>
     <div class="alert alert-success" role="alert">
@@ -61,23 +64,5 @@
     </div>
 
 </div>
-
-
-<!--        <p><a href="{% url 'password_reset' %}">Забули пароль?</a></p>-->
-<!--        <p>Уперше тут?-->
-<!--            <a href="{% url 'register' %}">Реєстрація</a>-->
-<!--        </p>-->
-
-
-<!--    <div class="alert alert-success" role="alert">-->
-<!--        <a href="{% url 'login' %}" class="enter-button">Вхід</a>-->
-<!--        <p>Уперше тут?-->
-<!--            <a href="{% url 'register' %}">Реєстрація</a>-->
-<!--        </p>-->
-<!--    </div>-->
-<!--    <div class="alert alert-success" role="alert">-->
-<!--        <h3>Welcome, unverified aboba.</h3>-->
-<!--        <a href="{% url 'login' %}">Login?</a>-->
-<!--    </div>-->
 {% endif %}
 {% endblock %}
