--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -1,20 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-<!-- <p>На ваш Email було надіслано лист з подальшими інструкціями для відновлення</p> -->
-<!--<div class="">-->
 <h1>Скинути пароль</h1>
-<p>Забули пароль? Введіть ваш Email, ми надішлемо подальші інструкції.</p>
+<p>Забули пароль? Введіть ваш email, ми надішлемо подальші інструкції.</p>
 <form method="POST" class="main-block">
     {% csrf_token %}
     {% for field in password_reset_form %}
-    <p>{{ field.label }}: {{ field }}</p>
-
-    {% for error in field.errors %}
-    <small style="color: red">{{ error }}</small><br>
+        <p>{{ field.label }}: {{ field }}</p>
+        {% for error in field.errors %}
+            <small>{{ error }}</small><br>
+        {% endfor %}
     {% endfor %}
-    {% endfor %}
-    <!--            {{ password_reset_form }}                    -->
     <button type="submit" class="enter-button">Отримати листа</button>
 </form>
-<!--</div> -->
 {% endblock content %}
